--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100%;   
     display:block;
-    background-color: red;
+    background-color: #223645;
 }
 
 header {
@@ -22,7 +22,7 @@ section {
     background-color: white; 
     width: 60%;
     height: 68.5%;
-    //border-radius: 0px 0px 0px 0px;
+    border-radius: 0px 0px 0px 0px;
     display:block;
     overflow: auto;
     color:black;
