--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -2,7 +2,8 @@ body {
     width: 100%;
     height: 100%;   
     display:block;
-    background-color: #223645;
+    background-color: #f5f5f5;
+    
 }
 
 header {
@@ -31,6 +32,10 @@ section {
     border-top: none;
     margin-left: 20%;
     margin-right: 20%;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 24px;
+    line-height: 1.43;
+    color: #484848;
 }
 
 article {
