--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -64,8 +64,8 @@ footer {
 
 
 
-/****** LOGIN MODAL ******/
-.loginmodal-container {
+/****** Login MODAL ******/
+.Loginmodal-container {
   padding: 30px;
   max-width: 350px;
   width: 100% !important;
@@ -76,18 +76,47 @@ footer {
   overflow: hidden;
   font-family: roboto;
 }
-.loginmodal-container h1 {
+.Loginmodal-container h1 {
   text-align: center;
   font-size: 1.8em;
   font-family: roboto;
 }
-.loginmodal-container input[type=submit] {
+.Loginmodal-container input[type=submit] {
   width: 100%;
   display: block;
   margin-bottom: 10px;
   position: relative;
 }
-.loginmodal-container input[type=text], input[type=password] {
+.Loginmodal-container input[type=text], input[type=password] {
+  height: 44px;
+  font-size: 16px;
+  width: 100%;
+}
+
+/****** Inscription MODAL ******/
+.Inscriptionmodal-container {
+  padding: 30px;
+  max-width: 350px;
+  width: 100% !important;
+  background-color: #F7F7F7;
+  margin: 0 auto;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  font-family: roboto;
+}
+.Inscriptionmodal-container h1 {
+  text-align: center;
+  font-size: 1.8em;
+  font-family: roboto;
+}
+.Inscriptionmodal-container input[type=submit] {
+  width: 100%;
+  display: block;
+  margin-bottom: 10px;
+  position: relative;
+}
+.Inscriptionmodal-container input[type=text], input[type=password] {
   height: 44px;
   font-size: 16px;
   width: 100%;
