--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -150,4 +150,114 @@ footer {
   font-size: 16px;
   width: 100%;
 }
-
+/****** Home ******/
+.home {
+  background: #f9f9f9; }
+  .home .row.last {
+    border-top: 0 none; }
+  .home .row {
+    border-top: 1px solid #e5e6e7;
+    border-bottom: 1px solid #e5e6e7;
+    height: 410px; }
+    .home .row .box.last {
+      border-right: 1px solid #e5e6e7; }
+    .home .row .box {
+      width: 300px;
+      height: 380px;
+      border-left: 1px solid #e5e6e7;
+      padding-top: 30px;
+      padding-left: 25px;
+      float: left; }
+      .home .row .box .product:hover {
+        -webkit-box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.2); }
+      .home .row .box .product {
+        background: url("../Images/Icone/boxfull.png") no-repeat;
+        width: 263px;
+        height: 340px;
+        position: relative;
+        -webkit-transition-property: background;
+        -moz-transition-property: background;
+        -ms-transition-property: background;
+        -o-transition-property: background;
+        transition-property: background;
+        -webkit-transition-duration: 2s;
+        -moz-transition-duration: 2s;
+        -ms-transition-duration: 2s;
+        -o-transition-duration: 2s;
+        transition-duration: 2s;
+        -webkit-transition-delay: 2s;
+        -moz-transition-delay: 2s;
+        -ms-transition-delay: 2s;
+        -o-transition-delay: 2s;
+        transition-delay: 2s; }
+        .home .row .box .product a img {
+          margin-left: 1px;
+          margin-top: 1px; }
+        .home .row .box .product .description {
+          font-family: 'AllerLightRegular';
+          font-size: 16px;
+          color: #39414d;
+          font-style: italic;
+          text-align: center;
+          padding-top: 8px;
+          text-shadow: 1px 1px 1px white; }
+          .home .row .box .product .description strong {
+            font-family: 'AllerRegular';
+            font-style: normal; }
+          .home .row .box .product .description a.price {
+            font-family: 'Helvetica';
+            font-size: 18px;
+            color: #74bc0e;
+            font-weight: bold;
+            font-style: normal;
+            text-decoration: none; }
+        .home .row .box .product .add {
+          background: url("../Images/Icone/sprites.png") no-repeat;
+          background-position: 0 0;
+          width: 43px;
+          height: 44px;
+          display: block;
+          text-indent: -9898px;
+          position: absolute;
+          bottom: 25px;
+          right: -13px;
+          -webkit-transition: opacity 0.2s ease-in; }
+        .home .row .box .product .add:hover {
+          background: url("../Images/Icone/sprites.png") no-repeat;
+          background-position: 0 0;
+          width: 43px;
+          height: 44px;
+          display: block;
+          text-indent: -9898px;
+          position: absolute;
+          bottom: 25px;
+          right: -13px;
+          opacity: 0.7;
+          -moz-opacity: 0.7;
+          filter: alpha(opacity=7); }
+        .home .row .box .product .valid {
+          background: url("../Images/Icone/sprites.png") no-repeat;
+          background-position: 0 -45px;
+          width: 43px;
+          height: 44px;
+          display: block;
+          text-indent: -9898px;
+          position: absolute;
+          bottom: 25px;
+          right: -13px;
+          -webkit-transition: opacity 0.2s ease-in; }
+        .home .row .box .product .valid:hover {
+          background: url("../Images/Icone/sprites.png") no-repeat;
+          background-position: 0 -90px;
+          width: 43px;
+          height: 44px;
+          display: block;
+          text-indent: -9898px;
+          position: absolute;
+          bottom: 25px;
+          right: -13px;
+          opacity: 0.9;
+          -moz-opacity: 0.9;
+          filter: alpha(opacity=9); }
