--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -155,7 +155,7 @@ footer {
 .StoreOption {
    
 }
-.description {
+.StoreOption .wrapper .table .description {
     display:none;
     position:absolute;
     border:2px solid #000;
@@ -164,7 +164,7 @@ footer {
     background:black;
 }
 
-.box {
+.StoreOption .wrapper .table .box {
     
 }
 
