--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -186,7 +186,7 @@ footer {
     background:black;
 }
 
-.StoreOption .wrapper .table .box {
+.StoreOption .wrapper .table .box img{
     cursor: pointer ;
 }
 .StoreOption .wrapper .table .right{
