--- a/ProjetStore/CSS/style.css
+++ b/ProjetStore/CSS/style.css
@@ -166,7 +166,7 @@ footer {
     font-weight: 600;
     color: #ffffff;
     background: #2980b9;
-    padding-left: 2%;
+    padding-left: 10px;
 }
 .StoreOption .wrapper .table{
 
